--- a/skills.html
+++ b/skills.html
@@ -163,7 +163,7 @@
             >profile for more details. Also you can checkout my cv on this
             <a
               target="_blank"
-              href="https://bobangajicsm.github.io/portfolio/assets/adarshgupta-res.pdf"
+              href="https://adarshgupta114.github.io/portfolio/assets/adarshgupta-res.pdf"
               >link</a
             >
             >.
@@ -299,7 +299,7 @@
           src="assets/images/logopreload.png"
           alt="JavaScript Developer Loader, Web Developer Loader , Front End Developer Loader"
         />
-        <span>Slobodan is working</span>
+        <span>Adarsh is working</span>
         <div class="progress-bar">
           <div class="progress-bar_bg"><div></div></div>
         </div>
