--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Full Stack Developer /JavaScript / Machine Learner / Data Analyst</title>
     <meta
       name="description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+      content="Hire Professional Freelancer &amp; React. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
     />
     <meta name="robots" content="noodp" />
     <meta property="og:locale" content="en_US" />
