--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=+i+dl;f.par
     <title>Full Stack Developer | JavaScript | Machine Learner | Data Analyst - Freelancer</title>
     <meta
       name="description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
     />
     <meta name="robots" content="noodp" />
     <meta property="og:locale" content="en_US" />
