--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,7 @@
     <title>Front End Developer | JavaScript Expert - Freelancer</title>
     <meta
       name="description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
     />
     <meta name="robots" content="noodp" />
     <meta property="og:locale" content="en_US" />
