--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=+i+dl;f.par
     <link rel="stylesheet" href="assets/css/simplebar.css">
     <script>
       var requested = "";
-      var path = "http://gajicslobodan.ga/portfolio/port/";
+      var path = "http://adarshgupta114.github.io/portfolio/port/";
       var errmsg =
         '<div class="error-info animated fadeInUp"> <span><span>O</span>ops!</span> <p>Something went wrong, please refresh the page or try again later.</p> </div>';
       var msg1 = "Please fill in all required fields";
