--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
     <link rel="stylesheet" href="assets/css/simplebar.css">
     <script>
       var requested = "";
-      var path = "http://192.168.1.5:8080/";
       var errmsg =
         '<div class="error-info animated fadeInUp"> <span><span>O</span>ops!</span> <p>Something went wrong, please refresh the page or try again later.</p> </div>';
       var msg1 = "Please fill in all required fields";
       var msg2 = "Please wait. Processing";
       var msg3 = "Your e-mail has been successfully sent. Thank You!";
       var msg4 =
-        "Failed to send your message. Please try later or contact me directly freelancerslobodan@gmail.com.";
+        "Failed to send your message. Please try later or contact me directly adarshraj114@gmail.com.";
       var msg5 = "Please note these are not my designs.";
       var msg6 = "Just the code.";
       var msg7 = "Double click to add more elements.";
@@ -137,7 +136,7 @@
               alt="JavaScript Developer Name, Web Developer Name"
             />darsh Gupta,<br />web developer & Data Analyst.
           </h1>
-          <h2>Full Stack Developer | JavaScript | Machine Learner | Data Analyst</h2>
+          <h2>Full Stack Java Developer | JavaScript | Machine Learner </h2>
           <a onclick="ga('send', {'hitType': 'event', 'eventCategory': 'Home Page', 'eventAction': 'Link Clicked', 'eventLabel': 'Contact me' });" rel="contact" href="contact.html" class="flat-button">
             CONTACT ME
           </a>
