added some changes

--- a/about.html
+++ b/about.html
@@ -4,35 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Full Stack Developer /JavaScript / Machine Learner / Data Analyst</title>
-    <meta
-      name="description"
-      content="Hire Professional Freelancer &amp; React. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+    <title>Java Developer | Full-Stack Web Developer - Freelancer</title>
+    
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -135,7 +108,7 @@
         <div class="text-zone">
           <h1>About me</h1>
           <p>
-            I'm a very ambitious front-end developer looking for a role in an established IT company with the opportunity to work with the latest technologies on challenging and diverse projects.
+            I'm a very ambitious Java developer looking for a role in an established IT company with the opportunity to work with the latest technologies on challenging and diverse projects.
           </p>
           <p align="LEFT">
             I'm quietly confident, naturally curious, and perpetually working on
