--- a/index.html
+++ b/index.html
@@ -4,35 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Full Stack Developer | JavaScript | Machine Learner | Data Analyst - Freelancer</title>
-    <meta
-      name="description"
-      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Full-Stack Web Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+    <title>Java Developer | Full-Stack Web Developer - Freelancer</title>
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -88,7 +60,7 @@
         <img
           class="sub-logo"
           src="assets/images/logo_sub.png"
-          alt="JavaScript Developer, Web Developer , Front End Developer"
+          alt="Java Developer, Web Developer , Front End Developer"
         />
       </a>
       <nav class="en">
@@ -134,9 +106,9 @@
             <img
               src="assets/images/logo-s.png"
               alt="JavaScript Developer Name, Web Developer Name"
-            />darsh Gupta,<br />web developer & Data Analyst.
+            />darsh Gupta,<br />Web developer .
           </h1>
-          <h2>Full Stack Java Developer | JavaScript | Machine Learner </h2>
+          <h2>Full Stack Java Developer | JavaScript | Machine Learning </h2>
           <a onclick="ga('send', {'hitType': 'event', 'eventCategory': 'Home Page', 'eventAction': 'Link Clicked', 'eventLabel': 'Contact me' });" rel="contact" href="contact.html" class="flat-button">
             CONTACT ME
           </a>
