--- a/tips/javascript/javascript.html
+++ b/tips/javascript/javascript.html
@@ -141,27 +141,17 @@
       <ul>
         <li>
           <a
-            href="https://www.linkedin.com/in/slobodan-gaji%C4%87-006bb8b8/"
+            href="https://www.linkedin.com/in/adarsh-gupta-9708b4206/"
             target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
         </li>
         <li>
-          <a href="https://github.com/bobangajicsm" target="_blank"
+          <a href="https://github.com/ADARSHgupta114" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
         </li>
-        <li>
-          <a
-            href="https://www.youtube.com/channel/UCBu5ulO4d-d47lAVybpRTkw"
-            target="_blank"
-            ><i class="fab fa-youtube" aria-hidden="true"></i></a>
-        </li>
-        <li>
-          <a href="skype:live:bobangajicsm" target="_blank"
-            ><i class="fab fa-skype"></i
-          ></a>
-        </li>
+  
       </ul>
       <a id="mobile-link" href=""><i class="fa fa-bars"></i></a>
     </div>
