--- a/tips/typescript/typescript.html
+++ b/tips/typescript/typescript.html
@@ -4,42 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front End Developer | JavaScript Expert - Freelancer</title>
-    <meta
-      name="description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+    <title>Java Developer | Machine Learner - Freelancer</title>
+    
     <link rel="stylesheet" href="../../assets/css/animate.css" />
     <link rel="stylesheet" href="../../assets/css/font-awesome.css" />
     <link rel="stylesheet" href="../../assets/css/styles.css" />
     <link rel="stylesheet" href="../../assets/css/simplebar.css">
     <script>
       var requested = "";
-      var path = "http://gajicslobodan.ga/portfolio/port/";
+      var path = "http://adarshgupta114.github.io/portfolio/port/";
       var errmsg =
         '<div class="error-info animated fadeInUp"> <span><span>O</span>ops!</span> <p>Something went wrong, please refresh the page or try again later.</p> </div>';
       var msg1 = "Please fill in all required fields";
@@ -141,25 +114,14 @@
       <ul>
         <li>
           <a
-            href="https://www.linkedin.com/in/slobodan-gaji%C4%87-006bb8b8/"
+            href="https://www.linkedin.com/in/adarsh-gupta-9708b4206/"
             target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
         </li>
         <li>
-          <a href="https://github.com/bobangajicsm" target="_blank"
+          <a href="https://github.com/ADARSHgupta114" target="_blank"
             ><i class="fab fa-github"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.youtube.com/channel/UCBu5ulO4d-d47lAVybpRTkw"
-            target="_blank"
-            ><i class="fab fa-youtube" aria-hidden="true"></i></a>
-        </li>
-        <li>
-          <a href="skype:live:bobangajicsm" target="_blank"
-            ><i class="fab fa-skype"></i
           ></a>
         </li>
       </ul>
