--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#" class="no-js">
   <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KF3T2MX');</script>
-<!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Full Stack Developer | JavaScript | Machine Learner | Data Analyst - Freelancer</title>
-    <meta
-      name="description"
-      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+    <title>Java Developer | Machine Learner - Freelancer</title>
+    
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -140,7 +107,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=+i+dl;f.par
         <div class="text-zone">
           <h1>Contact me</h1>
           <p>
-            I am interested in freelance opportunities &#8211; especially
+            I am interested in freelance,full time opportunities &#8211; especially
             ambitious or large projects. However, if you have other request or
             question, don&#8217;t hesitate to contact me using below form
             either.
