--- a/portfolio.html
+++ b/portfolio.html
@@ -4,35 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front End Developer | JavaScript Expert - Freelancer</title>
+    <title>Java Developer | Machine Learner - Freelancer</title>
     <meta
       name="description"
-      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+      content="Hire Professional Freelancer &amp; Java Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
     />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
