--- a/skills.html
+++ b/skills.html
@@ -4,42 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front End Developer | JavaScript Expert - Freelancer</title>
-    <meta
-      name="description"
-      content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta name="robots" content="noodp" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta
-      property="og:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      property="og:site_name"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
-    />
-    <meta
-      name="twitter:title"
-      content="Front End Developer | Angular Expert - Freelancer"
-    />
+    <title>Java Developer | Full-Stack Web Developer - Freelancer</title>
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/simplebar.css">
     <script>
       var requested = "";
-      var path = "http://gajicslobodan.ga/portfolio/port/";
+      var path = "https://adarshgupta114.github.io/portfolio/port/";
       var errmsg =
         '<div class="error-info animated fadeInUp"> <span><span>O</span>ops!</span> <p>Something went wrong, please refresh the page or try again later.</p> </div>';
       var msg1 = "Please fill in all required fields";
@@ -137,12 +109,15 @@
             Expert in front-end development including technologies like
             <span class="tech-tag">HTML5</span>,
             <span class="tech-tag">JavaScript</span>,
+            <span class="tech-tag">Java</span>,
+            <span class="tech-tag">Hibernate JPA </span>,
+            <span class="tech-tag">Spring Boot,Eclipse, STS</span>,
             <span class="tech-tag">React</span>,
             <span class="tech-tag">C++</span>,
             <span class="tech-tag">Python</span>,
             <span class="tech-tag">Machine Learning</span>,
             <span class="tech-tag">MySQL</span>,
-            <span class="tech-tag">Tableau</span>,
+            <span class="tech-tag">MongoDB</span>,
             <span class="tech-tag">Git</span>, etc.
           </p>
           <p>
@@ -185,6 +160,22 @@
                     href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets"
                     target="_blank"
                     >CSS3</a
+                  >
+                </li>
+                <li>
+                  <a
+                    data-weight="14"
+                    href="https://en.wikipedia.org/wiki/JSON"
+                    target="_blank"
+                    >Java</a
+                  >
+                </li>
+                <li>
+                  <a
+                    data-weight="14"
+                    href="https://en.wikipedia.org/wiki/JSON"
+                    target="_blank"
+                    >Servlet</a
                   >
                 </li>
                 <li>
