--- a/tips.html
+++ b/tips.html
@@ -218,7 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           src="assets/images/logopreload.png"
           alt="JavaScript Developer Loader, Web Developer Loader , Front End Developer Loader"
         />
-        <span>Slobodan is working</span>
+        <span>Adarsh is working</span>
         <div class="progress-bar">
           <div class="progress-bar_bg"><div></div></div>
         </div>
